k8s/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foodshare-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: foodshare.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: host-service 
            port:
              number: 80

      - path: /payment(/|$)(.*) 
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 80
